# apis/sentinel/api/handlers/resources/get.go
@@ -60,8 +60,9 @@ func getByID(service service.Service) gin.HandlerFunc {
 // @Description Get all context and details that are granted to this context
 // @Accept  json
 // @Produce  json
-// @Param id path string true "Resource ID"
+// @Param x-sentinel-tenant header string true "Desired tenant - environment"
 // @Param claimant query string true "Claimant requesting the operation"
+// @Param id path string true "Resource ID"
 // @Success 200 {object} context.Output	"ok"
 // @Success 404 {object} views.ErrView
 // @Success 500 {object} views.ErrView
